--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type": "git",
     "url": "git+https://github.com/Leonamquintao/app-shell.git"
   },
-  "keywords": ["React", "micro-frontend", "custom element"],
+  "keywords": [
+    "React",
+    "micro-frontend",
+    "custom element"
+  ],
   "author": "leonamquintao@gmail.com",
   "license": "ISC",
   "bugs": {
@@ -34,6 +38,10 @@
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "redux-persist": "^5.10.0"
   }
- 
 }
