--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.3",
@@ -40,6 +41,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "redux-persist": "^5.10.0"
